--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ashjith",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,13 +10,12 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "papperanimate": "^0.0.9",
+    "add-to-calendar-button-react": "^2.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "wafflecss": "^1.0.48",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
